chore: solving bug overflow

--- a/src/layout/layout.module.css
+++ b/src/layout/layout.module.css
@@ -15,7 +15,7 @@
 .MainContentContainer {
     flex: 1;
     overflow-y: auto;
-    padding: 20px;
+    padding: 0px 0px 0px 20px;
     height: 100%;
 }
 
